 * Add a predictable default ordering of the "Object/Other permissions" in the Group Editing view, allow this ordering to be customised (Daniel Kirkham)
 * Add `AbstractImage.get_renditions()` for efficient generation of multiple renditions (Andy Babic)
 * Optimise queries in collection permission policies using cache on the user object (Sage Abdullah)
 * Fix: Prevent choosers from failing when initial value is an unrecognised ID, e.g. when moving a page from a location where `parent_page_types` would disallow it (Dan Braghis)
 * Fix: Move comment notifications toggle to the comments side panel (Sage Abdullah)
 * Fix: Remove comment button on InlinePanel fields (Sage Abdullah)
 * Fix: Fix missing link to `UsageView` from `EditView` for snippets (Christer Jensen)
 * Fix: Prevent lowercase conversions of IndexView column headers (Virag Jain)
 * Fix: Ensure that `RichText` objects with the same values compare as equal (NikilTn)
 * Fix: Use `gettext_lazy` on generic model views so that language settings are correctly used (Matt Westcott)
 * Fix: Prevent JS error when reverting the spinner on a submit button after a validation error (LB (Ben) Johnston)
 * Fix: Prevent crash when comparing page revisions that include `MultipleChooserPanel` (Matt Westcott)
 * Fix: Ensure that title and slug continue syncing after entering non-URL-safe characters (LB (Ben) Johnston)
 * Fix: Ensure that title and slug are synced on keypress, not just on blur (LB (Ben) Johnston)
 * Fix: Add a more visible active state for side panel toggle buttons (Thibaud Colas)
 * Fix: Debounce and optimise live preview panel to prevent excessive requests (Sage Abdullah)
 * Fix: Use constant-time comparison for image serve URL signatures (Jake Howard)
 * Fix: Ensure taggit field type-ahead options show correctly in the dark mode theme (Sage Abdullah)
 * Fix: Fix the lock description message missing the model_name variable when locked only by system (Sébastien Corbin)